I6 Setup mongoose pre function for user delete

--- a/node_server/.eslintrc.json
+++ b/node_server/.eslintrc.json
@@ -55,7 +55,11 @@
         /* Disabled because this rule isn't picking up the TypeScript 
         definitions even though they are displaying on hover like expected 
         within the JSDoc documentation */
-        "jsdoc/no-undefined-types": "off"
+        "jsdoc/no-undefined-types": "off",
+
+        /* Disabled so that you can use functions like schema.pre where `this`
+        is used within a function and not a class. */
+        "no-invalid-this": "off"
       }
     }
   ]
