--- a/node_server/package.json
+++ b/node_server/package.json
@@ -33,14 +33,14 @@
     }
   },
   "dependencies": {
-    "@types/chai": "^4.2.11",
+    "@types/chai": "^4.2.12",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
     "@types/mocha": "^7.0.2",
-    "@types/mongoose": "^5.7.18",
+    "@types/mongoose": "^5.7.32",
     "@types/morgan": "^1.9.0",
-    "@types/node": "^14.0.0",
+    "@types/node": "^14.0.26",
     "@types/node-fetch": "^2.5.7",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.2",
@@ -52,9 +52,13 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-graphql": "^0.11.0",
     "express-session": "^1.17.1",
+    "graphql": "^15.3.0",
+    "graphql-compose": "^7.18.1",
+    "graphql-compose-mongoose": "^7.4.1",
     "mocha": "^7.1.2",
-    "mongoose": "^5.9.13",
+    "mongoose": "^5.9.26",
     "mongoose-int32": "^0.3.1",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
@@ -65,10 +69,10 @@
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
     "ts-node": "^8.10.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "eslint": "^7.0.0",
+    "eslint": "^7.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsdoc": "^25.0.1",
